--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://localhost:27017/movie"
+DATABASE_URL="mongodb+srv://tsendee:96756663@ecommerce.jjalfga.mongodb.net/?retryWrites=true&w=majority&appName=ecommerce"
